git add --all .

--- a/main.less
+++ b/main.less
@@ -1,5 +1,8 @@
 /* COLORS, FONTS, ANIMATIONS ETC. */
 @import './stylesheets/tweaks.less';
 
+/* FONTS */
+@import './stylesheets/fonts.less'; 
+
 /* GLOBAL */
 @import './stylesheets/global.less';
