--- a/main.less
+++ b/main.less
@@ -1,8 +1,14 @@
 /* COLORS, FONTS, ANIMATIONS ETC. */
 @import './stylesheets/tweaks.less';
-
-/* FONTS */
+@import './stylesheets/keyframes.less';
 @import './stylesheets/fonts.less'; 
 
 /* GLOBAL */
 @import './stylesheets/global.less';
+
+/* MOBILE */
+@import './stylesheets/mobile.less';
+
+/* NAVIGATION */
+@import './stylesheets/navigation.less';
+
