--- a/stylesheets/global.less
+++ b/stylesheets/global.less
@@ -4,39 +4,35 @@
 
 .Mobile-overlay,
 .Mobile-bar.Mobile-bar--top {
-    display: none;
+  display: none;
 }
-
 
 /******************************/
 
-
-/* Site loading aesthectics */
+/* Site loading aesthetics */
 
 .Site {
+  .Index-page-content {
+    opacity: 0;
+    transition: opacity 0.6s;
+  }
+  &.loaded {
     .Index-page-content {
-        opacity: 0;
-        transition: opacity 0.6s;
+      opacity: 1;
     }
-    &.loaded {
-        .Index-page-content {
-            opacity: 1;
-        }
-    }
-    position:relative;
-    overflow-x:hidden;
+  }
+  position: relative;
+  overflow-x: hidden;
 }
 
-
 /******************************/
-
 
 /* Global Font assignments */
 
 h1 {
-    font-family: "Geomanist" !important;
-    font-weight: bold !important;
-    letter-spacing: 1px;
+  font-family: "Geomanist" !important;
+  font-weight: bold !important;
+  letter-spacing: 1px;
 }
 
 h2,
@@ -44,567 +40,399 @@ h3,
 a,
 div,
 input {
-    font-family: "Geomanist" !important;
-    font-weight: bold !important;
-    letter-spacing: 0;
+  font-family: "Geomanist" !important;
+  font-weight: bold !important;
+  letter-spacing: 0;
 }
 
 p {
-    font-family: "Geomanist" !important;
-    font-weight: 300 !important;
-    font-size: 1.2em;
-    line-height: 1.5em;
+  font-family: "Geomanist" !important;
+  font-weight: 300 !important;
+  font-size: 1.2em;
+  line-height: 1.5em;
 }
 
 figure {
-    font-family: "Geomanist";
-    font-style: italic;
+  font-family: "Geomanist";
+  font-style: italic;
 }
 
-
 /******************************/
-
 
 /* fix image resizing bug */
 
-section[id*=gallery] {
+section[id*="gallery"] {
+  max-height: 92vh;
+  height: 45vw;
+  min-height: 500px;
+  .Index-gallery-wrapper,
+  .Index-gallery-item {
     max-height: 92vh;
     height: 45vw;
     min-height: 500px;
-    .Index-gallery-wrapper,
-    .Index-gallery-item {
-        max-height: 92vh;
-        height: 45vw;
-        min-height: 500px;
-    }
+  }
 }
-
 
 /******************************/
-
-
-/* Moible adjustments */
-
-@media screen and (max-width:640px) {
-    #brand-money-shot {
-        h1 {
-            font-size: 5vw !important;
-            text-align: center !important;
-        }
-        .brand-mark {
-            max-width: 100px;
-        }
-    }
-    [id*=seafoam] {
-        h3 {
-            font-size: 1.1em;
-            text-align: justify !important;
-        }
-    }
-    #quote {
-        div {
-            font-size: 4vh !important;
-        }
-    }
-    #who-we-are {
-        h2 {
-            text-align: left !important;
-        }
-        h3 {
-            font-size: 2em;
-            text-align: center !important;
-        }
-    }
-    .sqs-block-button-container--right {
-        text-align: center !important;
-    }
-    .sqs-block-spacer {
-        padding: 0;
-    }
-    #contact-seafoam {
-        h2,
-        .lightbox-handle-wrapper {
-            text-align: center !important;
-        }
-    }
-}
-
-
-/******************************/
-
-
-/* Animations */
-
-@keyframes iconDraw {
-    0% {
-        stroke-width: 6px;
-        fill-opacity: 0;
-        opacity: 1;
-    }
-    75% {
-        stroke-dashoffset: 0;
-    }
-    100% {
-        stroke-width: 6px;
-        fill-opacity: 0.7;
-        stroke-dashoffset: 0;
-    }
-}
-
-@keyframes fadeInMark {
-    from {
-        opacity: 0;
-        fill-opacity: 0;
-    }
-    to {
-        opacity: 1;
-        fill-opacity: 1;
-    }
-}
-
-.transition-mark(@delay) {
-    @keyframes fadeInOutMark {
-        from {
-            fill-opacity: 0.8;
-        }
-        to {
-            fill-opacity: 0.2;
-        }
-    }
-    animation:fadeInOutMark 1.4s linear infinite alternate;
-    animation-delay:@delay;
-}
-
-
-/******************************/
-
-
-/* Navigation */
-
-.Header.Header--top {
-    min-height: 50px !important;
-    display: block !important;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-    background: none;
-    transition:transform 0.4s, opacity 0.2s, background-color 0.2s;
-    .Header-branding {
-        opacity: 0;
-    }
-    .Header-inner.Header-inner--top {
-        max-width: 100%;
-        padding-top: 1em;
-        padding-bottom: 1em;
-        &[data-nc-group="top"] {
-            display: flex !important;
-        }
-    }
-    path {
-        fill: @gold;
-    }
-    .fa-times {
-        display: none;
-    }
-    @keyframes spin {
-        from {
-            transform: rotateZ(0);
-        }
-        to {
-            transform: rotateZ(360deg);
-            opacity: 1;
-        } 
-    }
-
-    // remove interaction, add animation
-    &.transitioning {
-        * {
-            pointer-events: none;
-        }
-        svg {
-            animation: spin 0.3s infinite linear;
-        }
-    }
-
-    // add backgrond color and logo left
-    &.scrolling{
-        background-color: #F2F2F2;
-        box-shadow: 0 2px 10px rgba(10, 10, 10, 0.1);
-        .Header-branding {
-            opacity: 1;
-        }
-        path {
-            fill: @seafoam;
-        }
-    }
-
-    // hide the nav on scroll down
-    &.scrolling-down {
-        //opacity: 0;
-        //transform: translateY(-54px);
-    }
-
-    // show the nav on scroll up
-    &.scrolling-up {
-        //opacity: 1;
-        //transform: translateY(0px);
-    }
-
-    /* 
-       change the color of the toggle
-       hide the logo left remove box shadow
-    */
-    &.menu-open {
-        background: none !important;
-        box-shadow: none !important;
-        transform: translateY(0px);
-        opacity:1;
-        path {
-            fill: @gold !important;
-        }
-        .fa-times {
-            display: inline-block;
-        }
-        .fa-bars {
-            display: none;
-        }
-        .Header-branding {
-            opacity: 0 !important;
-        }
-    }
-}
-
-
-/******************************/
-
-
-/******************************/
-
 
 /* Landing view */
 
 .brand-logo {
-    max-width: 500px;
-    margin: 0 auto;
-    svg path {
-        fill: hsl(45, 100%, 90%);
-        &.cls-7 {
-            opacity: 0.6;
-            .transition-mark(0s);
-        }
-        &.cls-8 {
-            opacity: 0.2;
-            .transition-mark(0.4s);
-        }
-        &.cls-9 {
-            opacity: 0.1;
-            .transition-mark(0.8s);
-        }
-        &.cls-10 {
-            opacity: 0.05;
-            .transition-mark(1.2s);
-        }
+  max-width: 500px;
+  margin: 0 auto;
+  svg path {
+    fill: hsl(45, 100%, 90%);
+    &.cls-7 {
+      opacity: 0.6;
+      .transition-mark(0s);
     }
+    &.cls-8 {
+      opacity: 0.2;
+      .transition-mark(0.4s);
+    }
+    &.cls-9 {
+      opacity: 0.1;
+      .transition-mark(0.8s);
+    }
+    &.cls-10 {
+      opacity: 0.05;
+      .transition-mark(1.2s);
+    }
+  }
 }
 
 .brand-mark {
-    max-width: 250px;
-    margin: 0 auto;
-    svg {
-        path {
-            &.cls-1 {
-                fill: @gold;
-                opacity: 1;
-                fill-opacity: 1 !important;
-            }
-            &.cls-2 {
-                fill: @goldLight;
-                opacity: 1;
-                fill-opacity: 1 !important;
-            }
-        }
+  max-width: 250px;
+  margin: 0 auto;
+  svg {
+    path {
+      &.cls-1 {
+        fill: @gold;
+        opacity: 1;
+        fill-opacity: 1 !important;
+      }
+      &.cls-2 {
+        fill: @goldLight;
+        opacity: 1;
+        fill-opacity: 1 !important;
+      }
     }
+  }
 }
 
 .thumb-image {
-    opacity: 0;
-    transition: opacity 0.4s ease-in;
-    &.loaded {
-        opacity: 1;
-    }
+  opacity: 0;
+  transition: opacity 0.4s ease-in;
+  &.loaded {
+    opacity: 1;
+  }
 }
 
-
 /******************************/
-
 
 /* Home Page Index */
 
 // landing view
 #brand-money-shot {
-    background: @seafoam;
-    min-height: 550px;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    .Index-page-content {
-        text-align: center;
-        flex: 1 1 auto;
-    }
-    * {
-        color: hsl(45, 100%, 90%);
-    }
-    h1 {
-        font-size: 2.15em;
-        margin-bottom: 0;
-    }
+  background: @seafoam;
+  min-height: 550px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  .Index-page-content {
+    text-align: center;
+    flex: 1 1 auto;
+  }
+  * {
+    color: hsl(45, 100%, 90%);
+  }
+  h1 {
+    font-size: 2.15em;
+    margin-bottom: 0;
+  }
 }
 
 // gallery pages
 .Index-gallery-item-content-heading {
-    text-shadow: 1px 2px 12px rgba(10, 10, 10, 0.3);
+  text-shadow: 1px 2px 12px rgba(10, 10, 10, 0.3);
 }
 
 // quote page
 #quote {
-    border-bottom: 5px solid @gold;
-    background: hsl(0, 0%, 95%);
+  border-bottom: 5px solid @gold;
+  background: hsl(0, 0%, 95%);
+}
+
+// who we are
+#who-we-are {
+  h3 {
+    font-family: "Geomanist Med" !important;
+  }
+  .icon {
+    background: @royalBlue;
+    height: 150px;
+    max-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 auto;
+    svg {
+      font-size: 4em;
+    }
+  }
+  #block-yui_3_17_2_1_1525719819087_39574 {
+    .icon {
+      background: @gold;
+    }
+    path {
+      fill: @royalBlue;
+    }
+  }
+  #block-yui_3_17_2_1_1525719819087_40857 {
+    .icon {
+      background: @seafoam;
+    }
+    path {
+      fill: @gold;
+    }
+  }
+  #block-yui_3_17_2_1_1525719819087_42526 {
+    .icon {
+      background: @royalBlue;
+    }
+    path {
+      fill: @gold;
+    }
+  }
 }
 
 // any page with seafoam in the title
 [id*="seafoam"] {
-    .Index-page-content {
-        padding-top: 0;
-        padding-bottom: 0;
+  .Index-page-content {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .Index-page-content {
+    min-height: 550px;
+    max-height: 77vh;
+    display: flex;
+    align-items: center;
+    .sqs-layout {
+      flex: 1 1 auto;
     }
-    .Index-page-content {
-        min-height: 550px;
-        max-height: 77vh;
-        display: flex;
-        align-items: center;
-        .sqs-layout {
-            flex: 1 1 auto;
-        }
+  }
+  background: @seafoam;
+  * {
+    color: @gold !important;
+    text-shadow: 1px 1px 8px rgba(10, 10, 10, 0.1);
+  }
+  h2 {
+    transition: opacity 1.3s ease-in-out, transform 1.3s;
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  p,
+  figure,
+  h1,
+  h3 {
+    transition: opacity 1.3s 1.2s ease-in-out, transform 1.3s 1.2s;
+    font-family: "Geomanist Med" !important;
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  svg {
+    path {
+      fill-opacity: 0;
+      stroke: @gold;
+      stroke-width: 7px;
+      stroke-dasharray: 2400;
+      stroke-dashoffset: 2400;
     }
-    background:@seafoam;
-    * {
-        color: @gold !important;
-        text-shadow: 1px 1px 8px rgba(10, 10, 10, 0.1);
+  }
+  em {
+    font-size: 1.4em;
+  }
+  h2 {
+    font-size: 5vw;
+    @media screen and (min-width: 1200px) {
+      font-size: 4em;
     }
-    h2 {
-        transition: opacity 1.3s ease-in-out, transform 1.3s;
-        opacity: 0;
-        transform: translateY(50px);
+    @media screen and (max-width: 768px) {
+      font-size: 2em;
     }
+  }
+  &:nth-child(even) {
+    background: @royalBlue;
+  }
+  &[data-scrollmap-triggered-in="true"] {
     p,
     figure,
-    h1,
+    h2,
     h3 {
-        transition: opacity 1.3s 1.2s ease-in-out, transform 1.3s 1.2s;
-
-        opacity: 0;
-        transform: translateY(50px);
-    }
+      opacity: 1;
+      transform: translateY(0);
+    } // svg
     svg {
-        path {
-            fill-opacity: 0;
-            stroke: @gold;
-            stroke-width: 7px;
-            stroke-dasharray: 2400;
-            stroke-dashoffset: 2400;
-        }
+      path {
+        animation: iconDraw 5s forwards;
+      }
     }
-    em {
-        font-size: 1.4em;
-    }
-    h2 {
-        font-size: 5vw;
-        @media screen and (min-width: 1200px) {
-            font-size:4em;
-        }
-        @media screen and (max-width: 768px) {
-            font-size: 2em;
-        }
-    }
-    &:nth-child(even) {
-        background: @royalBlue;
-    }
-    &[data-scrollmap-triggered-in="true"] {
-        p,
-        figure,
-        h2,
-        h3 {
-            opacity: 1;
-            transform: translateY(0);
-        } // svg
-        svg {
-            path {
-                animation: iconDraw 5s forwards;
-            }
-        }
-    }
+  }
 }
 
-
 /******************************/
-
 
 /* Navigation */
 
 #main-menu-navigation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    min-height: 100vh;
-    overflow-y: auto;
-    background: @seafoam;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s, transform 0.2s;
-    z-index: 998;
-    display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: auto;
+  background: @seafoam;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, transform 0.2s;
+  z-index: 998;
+  display: flex;
+  align-items: center;
+  @media screen and (min-width: 641px) {
     align-items: center;
-    @media screen and (min-width: 641px) {
-        align-items:center;
+  }
+  @media screen and (max-width: 640px) {
+    .sqs-block-code {
+      padding: 5px !important;
     }
-    @media screen and (max-width:640px) {
-        .sqs-block-code {
-            padding: 5px !important;
+  }
+  flex-wrap: wrap;
+  transform: scale(0.95);
+  .contact__item {
+    display: flex;
+    flex-wrap: wrap;
+    .contact__icon {
+      flex: 1 1 300px;
+      min-height: 100px;
+      @media screen and (max-width: 640px) {
+        min-height: 100%;
+        flex: 1 1 20px;
+        svg {
+          width: 30px;
         }
+      }
     }
-    flex-wrap:wrap;
-    transform: scale(0.95);
-    .contact__item {
-        display: flex;
-        flex-wrap: wrap;
-        .contact__icon {
-            flex: 1 1 300px;
-            min-height: 100px;
-            @media screen and (max-width: 640px) {
-                min-height:100%;
-                flex: 1 1 20px;
-                svg {
-                    width: 30px;
-                }
-            }
-        }
-        .contact__link {
-            flex: 1 1 300px;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            @media screen and (max-width: 640px) {
-                flex:1 1 150px;
-                text-align: left;
-                justify-content: flex-start;
-            }
-        }
+    .contact__link {
+      flex: 1 1 300px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @media screen and (max-width: 640px) {
+        flex: 1 1 150px;
+        text-align: left;
+        justify-content: flex-start;
+      }
     }
+  }
+  .Index-page-content {
+    flex: 1 1 auto;
+    transform: scale(0.9);
+    opacity: 0;
+    transition: opacity 0.4s 0.3s, transform 0.4s 0.3s;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    max-width: 100%;
+  }
+  .close-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    z-index: 333;
+  }
+  * {
+    color: @gold;
+  }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    .icon {
+      transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s,
+        opacity 0.3s 0.4s;
+      flex: 0 1 15em;
+      opacity: 0;
+      &:nth-child(1) {
+        transform: translateX(150px);
+      }
+      &:nth-child(2) {
+        transform: translateX(-150px);
+      }
+    }
+  }
+  &.open {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
     .Index-page-content {
-        flex: 1 1 auto;
-        transform: scale(0.9);
-        opacity: 0;
-        transition: opacity 0.4s 0.3s, transform 0.4s 0.3s;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        max-width: 100%;
-    }
-    .close-menu {
-        position: absolute;
-        top: 0;
-        right: 0;
-        cursor: pointer;
-        z-index: 333;
-    }
-    * {
-        color: @gold;
+      opacity: 1;
+      transform: scale(1);
     }
     .social-icons {
-        display: flex;
-        justify-content: center;
-        .icon {
-            transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s, opacity 0.3s 0.4s;
-            flex: 0 1 15em;
-            opacity: 0;
-            &:nth-child(1) {
-                transform: translateX(150px);
-            }
-            &:nth-child(2) {
-                transform: translateX(-150px);
-            }
+      .icon {
+        &:nth-child(1) {
+          opacity: 1;
+          transform: translateX(0px);
         }
-    }
-    &.open {
-        opacity: 1;
-        visibility: visible;
-        transform: scale(1);
-        .Index-page-content {
-            opacity: 1;
-            transform: scale(1);
+        &:nth-child(2) {
+          opacity: 1;
+          transform: translateX(0px);
         }
-        .social-icons {
-            .icon {
-                &:nth-child(1) {
-                    opacity: 1;
-                    transform: translateX(0px);
-                }
-                &:nth-child(2) {
-                    opacity: 1;
-                    transform: translateX(0px);
-                }
-            }
-        }
+      }
     }
-    &.transition-out {
-        opacity: 0;
-        transform: scale(0.8);
-    }
+  }
+  &.transition-out {
+    opacity: 0;
+    transform: scale(0.8);
+  }
 }
 
-
 /*******************************/
-
 
 /* Footer */
 
 .Footer {
-    p {
-        font-size: 1em;
-        color: @gold;
-    }
+  p {
+    font-size: 1em;
+    color: @gold;
+  }
 }
 
-
 /******************************/
-
 
 /* SQS Editor In Use Styles */
 
 .sqs-edit-mode-active,
 .sqs-edit-mode {
-    #main-menu-navigation {
-        position: static !important;
-        opacity: 1 !important;
-        visibility: visible !important;
-    }
-    .sqs-block,
-    p,
-    h1,
-    h2,
-    h3,
-    figure {
-        opacity: 1 !important;
-        transform: none !important;
-    }
-    path {
-        fill-opacity: 1 !important;
-    }
+  #main-menu-navigation {
+    position: static !important;
+    opacity: 1 !important;
+    visibility: visible !important;
+  }
+  .sqs-block,
+  p,
+  h1,
+  h2,
+  h3,
+  figure {
+    opacity: 1 !important;
+    transform: none !important;
+  }
+  path {
+    fill-opacity: 1 !important;
+  }
 }
