--- a/stylesheets/navigation.less
+++ b/stylesheets/navigation.less
@@ -98,10 +98,10 @@
 }
 
 /* Nav Page */
-.Big--navigation-wrapper {
+#Big-navigation{ 
   background: @seafoam;
   height: 100vh;
-  display: flex;
+  //display: flex;
   justify-content: center;
   display:none;
   .Big--navigation-content {
