less, nav changes

--- a/main.less
+++ b/main.less
@@ -12,3 +12,10 @@
 /* NAVIGATION */
 @import './stylesheets/navigation.less';
 
+/* LOGOS */
+@import './stylesheets/logos.less';
+
+/* PAGES */
+@import './stylesheets/homepage.less';
+
+
