--- a/stylesheets/navigation.less
+++ b/stylesheets/navigation.less
@@ -1,6 +1,9 @@
 /******************************/
 
 /* Navigation */
+.Header-nav--menu-icon{
+  cursor: pointer;
+}
 .Header.Header--top {
   min-height: 50px !important;
   display: block !important;
@@ -10,13 +13,9 @@
   left: 0;
   right: 0;
   z-index: 9999;
-  background: none;
   transition: transform 0.4s, opacity 0.2s, background-color 0.2s;
-  .Header-branding {
-    opacity: 0;
-  }
   .Header-inner.Header-inner--top {
-    max-width: 100%;
+    max-width: 1800px;
     padding-top: 1em;
     padding-bottom: 1em;
     &[data-nc-group="top"] {
@@ -24,7 +23,7 @@
     }
   }
   path {
-    fill: @gold;
+    fill: @seafoam;
   }
   .fa-times {
     display: none;
@@ -51,13 +50,13 @@
 
   // add backgrond color and logo left
   &.scrolling {
-    background-color: #f2f2f2;
+    background-color: #f2f2f2 !important;
     box-shadow: 0 2px 10px rgba(10, 10, 10, 0.1);
     .Header-branding {
       opacity: 1;
     }
     path {
-      fill: @seafoam;
+      fill: @seafoam !important;
     }
   }
 
@@ -97,28 +96,138 @@
   }
 }
 
-/* Nav Page */
-#Big-navigation{ 
+/* Navigation */
+#main-menu-navigation, #Big-navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: auto;
   background: @seafoam;
-  height: 100vh;
-  //display: flex;
-  justify-content: center;
-  display:none;
-  .Big--navigation-content {
-    margin-top: 60px;
-    .Header-nav-inner {
-      display:flex;
-      flex-direction: column;
-      align-items:center;
-      a {
-        font-size: 3vw;
-        line-height:3.3vw;
-        color: @gold;
-        @media screen and (max-width:768px){
-          font-size: 2em;
-          line-height:44px;          
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, transform 0.2s;
+  z-index: 998;
+  display: flex;
+  @media screen and (min-width: 641px) {
+    align-items: center;
+  }
+  @media screen and (max-width: 640px) {
+    .sqs-block-code {
+      padding: 5px !important;
+    }
+  }
+  flex-wrap: wrap;
+  transform: scale(0.95);
+  .Header-nav-inner {
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    a {
+      font-size: 3vw;
+      line-height:3.3vw;
+      color: @gold;
+      transition:opacity 0.3s;
+      &:hover{
+        opacity:0.65;
+      }
+      @media screen and (max-width:768px){
+        font-size: 2em;
+        line-height:44px;          
+      }
+    }
+  }
+  .contact__item {
+    display: flex;
+    flex-wrap: wrap;
+    transition:opacity 0.3s;
+    &:hover{
+      opacity:0.65;
+    }
+    .contact__icon {
+      flex: 1 1 300px;
+      min-height: 100px;
+      @media screen and (max-width: 640px) {
+        min-height: 100%;
+        flex: 1 1 20px;
+        svg {
+          width: 30px;
         }
       }
     }
+    .contact__link {
+      flex: 1 1 300px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @media screen and (max-width: 640px) {
+        flex: 1 1 150px;
+        text-align: left;
+        justify-content: flex-start;
+      }
+    }
+  }
+  .Index-page-content, .Big--navigation-content {
+    flex: 1 1 auto;
+    transform: scale(0.9);
+    opacity: 0;
+    transition: opacity 0.4s 0.3s, transform 0.4s 0.3s;
+    padding-bottom: 20px;
+    max-width: 100%;
+  }
+  .close-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    z-index: 333;
+  }
+  * {
+    color: @gold;
+  }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    .icon {
+      transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s,
+        opacity 0.3s 0.4s;
+      flex: 0 1 15em;
+      opacity: 0;
+      &:nth-child(1) {
+        transform: translateX(150px);
+      }
+      &:nth-child(2) {
+        transform: translateX(-150px);
+      }
+    }
+  }
+  &.open {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+    .Index-page-content, .Big--navigation-content {
+      opacity: 1;
+      transform: scale(1);
+    }
+    .social-icons {
+      .icon {
+        &:nth-child(1) {
+          opacity: 1;
+          transform: translateX(0px);
+        }
+        &:nth-child(2) {
+          opacity: 1;
+          transform: translateX(0px);
+        }
+      }
+    }
+  }
+  &.transition-out {
+    opacity: 0;
+    transform: scale(0.8);
   }
 }
